--- a/PageRank.ipynb
+++ b/PageRank.ipynb
@@ -37,11 +37,23 @@
    "id": "b7cbfe2d-721e-4794-9bda-b742f000ab61",
    "metadata": {},
    "source": [
-    "**How does Google decide which web pages appear first in your search results?**\n",
+    "This project explores and explain the **mathematics** behind the algorithm, implements it step by step using **Python**, and visualizes how different web structures influence the final rankings. Along the way, I highlight the elegance of applying **eigenvectors**, **stochastic matrices**, and the **random surfer model** to real-world problems. By demystifying PageRank, we gain insight into the intersection of **math**, **data**, and the **internet**.\n",
     "\n",
-    "Answer is **PageRank** algorithm, which is used by Google Search to rank web pages in their search engine results. It's use ideas from graph theory, linear algebra, and probability to model the importance of web pages based on their links.Originally developed by Larry Page and Sergey Brin at Stanford, **PageRank** was the foundation of Google's early success.\n",
+    "## ❓ Why I Chose This Project\n",
     "\n",
-    "This project explores and explain the **mathematics**,**code** and **general idea** behind the algorithm, implements it step by step using **Python**, and visualizes how different web structures influence the final rankings. Along the way, I highlight the elegance of applying **eigenvectors**, **stochastic matrices**, and the **random surfer model** to real-world problems. By demystifying PageRank, we gain insight into the intersection of **math**, **data**, and the **internet**.\n"
+    "I chose to explore the **PageRank algorithm** because it represents a perfect fusion of **mathematics, real-world application, and computer science innovation**. It’s:\n",
+    "\n",
+    "- 📚 **Mathematically rich**: rooted in graph theory, linear algebra, and Markov chains.\n",
+    "- 🌐 **Historically significant**: it changed how the world accesses information.\n",
+    "- 🧠 **Intellectually rewarding**: it's simple to understand at the core, yet powerful and deep.\n",
+    "- 💻 **Code-friendly**: ideal for hands-on learning, simulations, and algorithmic thinking.\n",
+    "\n",
+    "By working on this project, I wanted to:\n",
+    "- Understand one of the most **impactful algorithms** in computing history.\n",
+    "- Strengthen my skills in **mathematical modeling** and **Python implementation**.\n",
+    "- Show how elegant mathematics can solve massive real-world problems.\n",
+    "\n",
+    "This is more than just an academic exercise—it's a way to appreciate the algorithms that silently shape our digital lives every day.\n"
    ]
   },
   {
@@ -155,11 +167,12 @@
    "id": "49d923b7-aa0b-4e89-88d9-e43685424fd4",
    "metadata": {},
    "source": [
-    "A search engine called **RankDex** from IDD Information Services, designed by **Robin Li** in 1996, developed a strategy for site-scoring and page-ranking.It was one of the first search engines to use **link analysis**-which is ranking the popularity of a web site based on how many other sites had linked to it for ranking pages meaning it also considered hyperlink structure, not just keywords.**RankDex**, the first search engine with page-ranking and site-scoring algorithms, was launched in 1996.**Li** filed a patent for the technology in **RankDex** in 1997.It was granted in 1999.He later used it when he founded Baidu in China in 2000.Google founder **Larry Page** referenced **Li's work** as a citation in some of his U.S. patents for **PageRank**.\n",
-    "**Larry Page** and **Sergey Brin** developed **PageRank** at Stanford University in 1996 as part of a research project about a new kind of search engine. An interview with Héctor García-Molina, Stanford Computer Science professor and advisor to Sergey,provides background into the development of the page-rank algorithm.Sergey Brin had the idea that information on the web could be ordered in a hierarchy by **link popularity**-a page ranks higher as there are more links to it.The system was developed with the help of Scott Hassan and Alan Steremberg, both of whom were cited by Page and Brin as being critical to the development of Google. Rajeev Motwani and Terry Winograd co-authored with Page and Brin the first paper about the project, describing **PageRank** and the initial prototype of the [Google search engine](https://en.wikipedia.org/wiki/Google_Search), published in 1998.\n",
-    "> 📜 [*\"The Anatomy of a Large-Scale Hypertextual Web Search Engine\"*](http://infolab.stanford.edu/pub/papers/google.pdf)\n",
+    "A search engine called **RankDex** from IDD Information Services, designed by **Robin Li** in 1996, developed a strategy for site-scoring and page-ranking.It was one of the first search engines to use link analysis-which is ranking the popularity of a web site based on how many other sites had linked to it for ranking pages meaning it also considered hyperlink structure, not just keywords.It is called **RankDex** and it was launched in 1996.**Li** filed a patent for the technology in **RankDex** in 1997.He later used it when he founded **Baidu** in China in 2000.Google founder **Larry Page** referenced Li's work as a citation in some of his U.S. patents for **PageRank**.\n",
     "\n",
-    "Shortly after, Page and Brin founded **Google** -the company behind the Google search engine. While just one of many factors that determine the ranking of Google search results, **PageRank** continues to provide the basis for all of Google's web-search tools.The name **PageRank** plays on the name of developer **Larry Page**, as well as of the concept of a web page.The word is a trademark of Google, and the **PageRank** process has been patented assigned to **Stanford University** and not to Google.Google has exclusive license rights on the patent from **Stanford University**. The university received **1.8 million** shares of Google in exchange for use of the patent.It sold the shares in 2005 for **$336 million**."
+    "**Larry Page** and **Sergey Brin** developed **PageRank** at Stanford University in 1996 as part of a research project about a new kind of search engine. Sergey Brin had the idea that information on the web could be ordered in a hierarchy by link popularity-a page ranks higher as there are more links to it.The system was developed with the help of Scott Hassan and Alan Steremberg, both of whom were cited by Page and Brin as being critical to the development of Google. Rajeev Motwani and Terry Winograd co-authored with Page and Brin the first paper about the project, describing **PageRank** and the initial prototype of the [Google search engine](https://en.wikipedia.org/wiki/Google_Search), published in 1998.\n",
+    "> 📜 [*The Anatomy of a Large-Scale Hypertextual Web Search Engine*](http://infolab.stanford.edu/pub/papers/google.pdf)\n",
+    "\n",
+    "While just nowadays has many factors that determine the ranking of Google search results, **PageRank** continues to provide the basis for all of Google's web-search tools.The name **PageRank** plays on the name of developer **Larry Page**, as well as of the concept of a web page.The word is a trademark of Google, and the **PageRank** process has been patented assigned to Stanford University and not to Google.Google has exclusive license rights on the patent from Stanford University. The university received 1.8 million shares of Google in exchange for use of the patent.It sold the shares in 2005 for $336 million."
    ]
   },
   {
@@ -394,13 +407,203 @@
    "id": "ce9cf8c4-03cd-4fdf-a00d-a0cc7c46fd10",
    "metadata": {},
    "source": [
-    "\n"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab6bada4-67f6-4390-b44a-f39ad3cc79df",
+   "metadata": {},
+   "source": [
+    "## **Algorithm**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6b43f4b-0792-4804-b350-ec440ddfad4b",
+   "metadata": {},
+   "source": [
+    "The PageRank algorithm outputs a probability distribution used to represent the likelihood that a person randomly clicking on links will arrive at any particular page. PageRank can be calculated for collections of documents of any size. It is assumed in several research papers that the distribution is evenly divided among all documents in the collection at the beginning of the computational process. The PageRank computations require several passes, called \"iterations\", through the collection to adjust approximate PageRank values to more closely reflect the theoretical true value.\n",
+    "\n",
+    "A probability is expressed as a numeric value between 0 and 1. A 0.5 probability is commonly expressed as a \"50% chance\" of something happening. Hence, a document with a PageRank of 0.5 means there is a 50% chance that a person clicking on a random link will be directed to said document.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "309a5a1f-d6ae-48b6-b2b4-eb08fad402cc",
+   "metadata": {},
+   "source": [
+    "### Simplified Algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e84f4c1-fe11-4b51-ba8e-08fd434564bc",
+   "metadata": {},
+   "source": [
+    "Lets have small universe of four web pages: **A**, **B**, **C**, and **D**. Links from a page to itself are ignored. Multiple outbound links from one page to another page are treated as a single link. **PageRank** is initialized to the same value for all pages. In the original form of **PageRank**, the sum of **PageRank** over all pages is the total number of pages on the web at that time.However, later versions of **PageRank**, and the remainder of this section, assume a probability distribution between **0** and **1**. Hence the initial value for each page in this example is **0.25**.\n",
+    "\n",
+    "The PageRank transferred from a given page to the targets of its outbound links upon the next iteration is divided equally among all outbound links.\n",
+    "\n",
+    "If the only links in the system were from pages **B**, **C**, and **D** to **A**, each link would transfer **0.25** PageRank to **A** upon the next iteration, for a total of 0.25 + 0.25 + 0.25 = **0.75**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c58e6ef2-e6d8-4ba7-aa99-768abcc1137e",
+   "metadata": {},
+   "source": [
+    "$$ PR(A) = PR(B) + PR(C) + PR(D). $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47273de0-d911-4292-b90c-f429bac4145d",
+   "metadata": {},
+   "source": [
+    "Instead in our example page **B** had a link to pages **C** and **A**, page **C** had a link to page **A**, and page **D** had links to all three pages. In the first iteration, page **B** would transfer half of its existing value **(0.125)** to page **A** and the other half **(0.125)** to page **C**. Page **C** would transfer all of its existing value **(0.25)** to the only page it links to, **A**. Since **D** had three outbound links, it would transfer one third of its existing value, or approximately **0.083**, to **A**. At the completion of this iteration, page **A** will have a PageRank of approximately **0.458**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb4bcea4-4012-4345-8ebb-a7b12d8ab0fb",
+   "metadata": {},
+   "source": [
+    "$$ PR(A) = \\frac{PR(B)}{2} + \\frac{PR(C)}{1} + \\frac{PR(D)}{3}. $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77e42b98-f04d-4ac2-aa1c-f9a9775f3685",
+   "metadata": {},
+   "source": [
+    "In other words, the PageRank conferred by an outbound link is equal to the document's own PageRank score divided by the number of outbound links **L( )**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a037031a-715d-43c9-ab95-2358be1c0918",
+   "metadata": {},
+   "source": [
+    "$$ PR(A) = \\frac{PR(B)}{L(B)} + \\frac{PR(C)}{L(C)} + \\frac{PR(D)}{L(D)}. $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcbfaaab-ec37-4a20-957b-0bc98889ac20",
+   "metadata": {},
+   "source": [
+    "In general case PageRank value for a page u is dependent on the PageRank values for each page **v** contained in the set **Bu** (the set containing all pages linking to page **u**), divided by the number **L(v)** of links from page **v**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0c2256b-7bbb-4620-8722-c2f20d40a222",
+   "metadata": {},
+   "source": [
+    "$$ PR(u) = \\sum_{v \\in B_u} \\frac{PR(V)}{L(V)} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15fed8b3-4852-44c1-b4ab-e96a79f8f042",
+   "metadata": {},
+   "source": [
+    "## Dumping Factor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34d5e73b-7d1e-4177-90cd-194965829508",
+   "metadata": {},
+   "source": [
+    "The **PageRank theory** holds that an imaginary surfer who is randomly clicking on links will eventually stop clicking. The probability, at any step, that the person will continue following links is a damping factor **d**. The probability that they instead jump to any random page is **1 - d**. Various studies have tested different damping factors, but it is generally assumed that the damping factor will be set around **0.85**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4aee6a92-0362-4b3e-8b59-624241c640c5",
+   "metadata": {},
+   "source": [
+    "The damping factor is subtracted from 1 (and in some variations of the algorithm, the result is divided by the number of documents (N) in the collection) and this term is then added to the product of the damping factor and the sum of the incoming PageRank scores."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f61bdd71-2f1e-4858-800e-72c7782e1b24",
+   "metadata": {},
+   "source": [
+    "$$ PR(A) = \\frac{1-d}{N} + d(\\frac{PR(B)}{L(B)} + \\frac{PR(C)}{L(C)} + \\frac{PR(D)}{L(D)} + \\cdots). $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431daad6-4a07-4389-9f68-c75249d08a7f",
+   "metadata": {},
+   "source": [
+    "$$  PR(A) = \\frac{1-d}{N} + d\\left(\\frac{PR(B)}{L(B)} + \\frac{PR(C)}{L(C)} + \\frac{PR(D)}{L(D)} + \\cdots \\right) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5dc11db-196a-436b-894d-f91d9e632a7a",
+   "metadata": {},
+   "source": [
+    "The damping factor adjusts the derived value downward. The original paper, however, gave the following formula, which has led to some confusion:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02683afd-ea22-4916-b730-9e899a5d694e",
+   "metadata": {},
+   "source": [
+    "$$  PR(A) = 1-d + d\\left(\\frac{PR(B)}{L(B)} + \\frac{PR(C)}{L(C)} + \\frac{PR(D)}{L(D)} + \\cdots \\right) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fca04b46-1bc9-47b4-8980-f8825fc25013",
+   "metadata": {},
+   "source": [
+    "The difference between them is that the PageRank values in the first formula sum to one, while in the second formula each PageRank is multiplied by N and the sum becomes N. A statement in Page and Brin's paper that the sum of all PageRanks is one and claims by other Google employees support the first variant of the formula above.\n",
+    "\n",
+    "Page and Brin confused the two formulas in their most popular paper \"The Anatomy of a Large-Scale Hypertextual Web Search Engine\", where they mistakenly claimed that the second formula formed a probability distribution over web pages.\n",
+    "\n",
+    "Google recalculates PageRank scores each time it crawls the Web and rebuilds its index. As Google increases the number of documents in its collection, the initial approximation of PageRank decreases for all documents.\n",
+    "\n",
+    "The formula uses a model of a random surfer who reaches their target site after several clicks, then switches to a random page. The PageRank value of a page reflects the chance that the random surfer will land on that page by clicking on a link. It can be understood as a **Markov chain** in which the **states** are **pages**, and the **transitions** are the **links** between pages – all of which are all equally probable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bc3f51b-c331-4226-8f6e-7c32be1cf12c",
+   "metadata": {},
+   "source": [
+    "If a page has no links to other pages, it becomes a **sink** and therefore terminates the random surfing process. If the random surfer arrives at a sink page, it picks another URL at random and continues surfing again.\n",
+    "\n",
+    "When calculating PageRank, pages with no outbound links are assumed to link out to all other pages in the collection. Their PageRank scores are therefore divided evenly among all other pages. In other words, to be fair with pages that are not sinks, these random transitions are added to all nodes in the Web. This residual probability, **d**, is usually set to **0.85**, estimated from the frequency that an average surfer uses his or her browser's bookmark feature. So, the equation is as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef0f047d-2c3d-44f7-b009-6734a37bf317",
+   "metadata": {},
+   "source": [
+    "$$  PR(pi\\text) = \\frac{1-d}{N} \\sum_{pj \\in M(pi\\text)} \\frac{PR(pi\\text)}{L(pi\\text)} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcd55e1a-e6b9-4b47-a424-001f61147a30",
+   "metadata": {},
+   "source": [
+    "where $ p_1,p_2,...,p_n$ are pages under consideration,$ M(pi\\text)$ is the set of pages that link $ pi\\text ,L(pi\\text)$ is the number of outbond links on page $ p_j$ , and **N** is the total number of pages."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3439e9a-0733-4e4d-ae19-a38de3184490",
+   "id": "d624a27b-4535-4147-9d2c-03369ae8e99a",
    "metadata": {},
    "outputs": [],
    "source": []
